# DogShelterManager

./: .gitignore  AdoptionList.h  CMakeLists.txt  CSV.cpp  CSV.h  HTML.cpp  HTML.h  README.md  dog.cpp  dog.h  gui.cpp  gui.h  gui.ui  main.cpp  repository.cpp  repository.h  service.cpp  service.h  undoRedo.cpp  undoRedo.h
files/: dogs.txt
